--- a/.env
+++ b/.env
@@ -25,7 +25,7 @@ APP_SECRET=62c5fe64a3588d07c88cf21255f7be45
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=8&charset=utf8mb4"
-DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=15&charset=utf8"
+DATABASE_URL=mysql://root:sa@127.0.0.1:3306/aplicacion
 ###< doctrine/doctrine-bundle ###
 
 ###> symfony/messenger ###
